--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -83,6 +83,7 @@ div img {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+    display: block;
 }
 
 
@@ -123,6 +124,7 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    
 }
 
 #back-button:hover {
