Arrumei a posição do texto da descrição com o flex

--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -53,7 +53,7 @@ div img {
 .container {
     height: 500px;
     text-align: center;
-}
+ }
 
 .icone {
     height: 15px;
@@ -69,10 +69,16 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    
 }
 
 #container-para-comprar {
