--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -76,9 +76,12 @@ div img {
     
 }
 
+#container-de-descricao>p{
+    max-width: 180px;
+}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
-    
 }
 
 #container-para-comprar {
@@ -91,6 +94,7 @@ div img {
     font-size: 60px;
     display: block;
 }
+
 
 
 /**
