--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -125,6 +125,9 @@ td button {
     height: 100px;
 }
 
+#tabela-compras{
+    text-align: center;
+}
 
 #back-button {
     background-color: white;
