--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -112,6 +112,10 @@ table {
     width: 60%;
 }
 
+#tabela-compras img {
+    width: 40px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
