--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -117,6 +117,10 @@ table {
     width: 40px;
 }
 
+td {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
