Alterei a posição da tabela para o centro utilizando o Flex

--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -111,6 +111,7 @@ div:last-child {
 
 table {
     width: 60%;
+   
 }
 
 #tabela-compras img {
@@ -139,6 +140,14 @@ td button:hover{
 .container-do-search {
     margin-top: 20px;
     height: 100px;
+      
+}
+
+.compras-tabela {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 #tabela-compras{
