--- a/quinzena5/labetube-react/src/App.css
+++ b/quinzena5/labetube-react/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ body {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .tela-inteira {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  
+  header {
+    background-color: rgb(255, 13, 13);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 50px;
+    height: 10%;
   }
-}
+  
+  main {
+    min-height: 80%;
+    display: flex;
+  }
+  
+  .menu-vertical {
+    flex-basis: 200px;
+    border-right-style: solid;
+    border-right-width: thin;
+  }
+  
+  .botoes-meunu-vertical {
+    list-style-type: none;
+  }
+  
+  .painel-de-videos {
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    row-gap: 10px;
+    column-gap: 10px;
+    margin: 10px;
+  }
+  
+  .box-pagina-principal {
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+    grid-template-columns: 1fr;
+    border-style: solid;
+    border-width: thin;
+    align-items: start;
+    justify-items: stretch;
+  }
+  
+  footer {
+    background: #333b3e;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    padding: 0 10px;
+  }
+  
+  .box-pagina-principal > img {
+    width: 100%;
+    height: 200px;
+  }
+  
+  h4 {
+    margin-left: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+  
